--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,6 +5,7 @@
   color: white;
   overflow-x: hidden;
   position: relative;
+  font-family: "Fira Sans", sans-serif;
 }
 
 .background-container {
@@ -15,6 +16,8 @@
   height: 100vh;
   z-index: 0;
   pointer-events: auto;
+  background-color: #1d1d1d; 
+
 }
 
 .App-header {
@@ -801,4 +804,114 @@ button:disabled {
     flex-direction: column;
     gap: 0.5rem;
   }
+}
+
+/* Fira Sans */
+
+.fira-sans-condensed-thin {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.fira-sans-condensed-extralight {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.fira-sans-condensed-light {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.fira-sans-condensed-regular {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.fira-sans-condensed-medium {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.fira-sans-condensed-semibold {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.fira-sans-condensed-bold {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.fira-sans-condensed-extrabold {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.fira-sans-condensed-black {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.fira-sans-condensed-thin-italic {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 100;
+  font-style: italic;
+}
+
+.fira-sans-condensed-extralight-italic {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 200;
+  font-style: italic;
+}
+
+.fira-sans-condensed-light-italic {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.fira-sans-condensed-regular-italic {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.fira-sans-condensed-medium-italic {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.fira-sans-condensed-semibold-italic {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.fira-sans-condensed-bold-italic {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.fira-sans-condensed-extrabold-italic {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 800;
+  font-style: italic;
+}
+
+.fira-sans-condensed-black-italic {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 900;
+  font-style: italic;
 }
