--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,18 +6,27 @@
   overflow-x: hidden;
   position: relative;
   font-family: "Fira Sans", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.App-wrapper {
+  width: calc(100vh * 9/16);
+  height: 100vh;
+  overflow-x: hidden;
 }
 
 .background-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: calc(100vh * 9/16);
   height: 100vh;
   z-index: 0;
   pointer-events: auto;
-  background-color: #1d1d1d; 
-
+  background-color: #1d1d1d;
+  transform: translate(-50%, -50%);
 }
 
 .App-header {
