--- a/frontend/src/components/pages/1_WelcomePage.css
+++ b/frontend/src/components/pages/1_WelcomePage.css
@@ -47,7 +47,7 @@ input {
   border-radius: 50px;
   font-size: 1.1rem;
   cursor: pointer;
-  transition: all 0.3s ease;
+  /* transition: all 0.3s ease; */
   margin-top: 2rem;
   min-width: 150px;
   pointer-events: auto;
