--- a/frontend/src/components/pages/4_AverageRating.css
+++ b/frontend/src/components/pages/4_AverageRating.css
@@ -2,8 +2,11 @@
   margin-top: 1rem;
   opacity: 0.8;
   font-size: 0.9rem;
+  font-family: 'Instrument Serif', serif;
+  color: black;
 }
 
 .rating-details p {
   margin: 0;
+  font-family: 'Instrument Serif', serif;
 }
