--- a/frontend/src/components/Decor.css
+++ b/frontend/src/components/Decor.css
@@ -18,7 +18,6 @@
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
-  max-height: 150px;
   overflow: hidden;
 }
 
@@ -44,8 +43,16 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: auto;
   z-index: 10;
+}
+
+.decor-pos-frame-c {
+    top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  z-index: 0;
 }
 
 .decor-pos-corner-tl {
