--- a/frontend/src/components/pages/3_BooksRead.css
+++ b/frontend/src/components/pages/3_BooksRead.css
@@ -9,7 +9,7 @@
   font-weight: bold;
   margin: 0;
   color: black;
-  font-family: 'Instrument Serif', serif;
+  font-family: var(--font-main);
   text-shadow: none;
 }
 
@@ -17,7 +17,7 @@
   font-size: 1.2rem;
   margin-top: 0.5rem;
   opacity: 0.9;
-  font-family: 'Instrument Serif', serif;
+  font-family: var(--font-main);
   color: black;
 }
 
