--- a/frontend/src/components/pages/6_TopGenres.css
+++ b/frontend/src/components/pages/6_TopGenres.css
@@ -37,7 +37,7 @@
   display: inline-block;
   min-width: 40px;
   text-align: center;
-  font-family: 'Instrument Serif', serif;
+  font-family: var(--font-main);
 }
 
 .genre-info {
@@ -49,7 +49,7 @@
   font-size: 1.3rem;
   font-weight: bold;
   margin-bottom: 0.3rem;
-  font-family: 'Instrument Serif', serif;
+  font-family: var(--font-main);
   color: black;
 }
 
@@ -57,7 +57,7 @@
   font-size: 1rem;
   opacity: 0.8;
   color: black;
-  font-family: 'Instrument Serif', serif;
+  font-family: var(--font-main);
 }
 
 .genre-percentage {
@@ -66,7 +66,7 @@
   color: black;
   min-width: 60px;
   text-align: right;
-  font-family: 'Instrument Serif', serif;
+  font-family: var(--font-main);
 }
 
 .no-genres {
@@ -78,7 +78,7 @@
 .no-genres p {
   font-size: 1.2rem;
   margin: 0;
-  font-family: 'Instrument Serif', serif;
+  font-family: var(--font-main);
   color: black;
 }
 
