--- a/frontend/src/components/pages/8_ReadingTime.css
+++ b/frontend/src/components/pages/8_ReadingTime.css
@@ -21,13 +21,13 @@
   font-weight: bold;
   color: black;
   margin: 0.5rem 0;
-  font-family: 'Instrument Serif', serif;
+  font-family: var(--font-main);
 }
 
 .reading-time-label {
   font-size: 1.2rem;
   opacity: 0.8;
-  font-family: 'Instrument Serif', serif;
+  font-family: var(--font-main);
   color: black;
 }
 
@@ -46,7 +46,7 @@
 .reading-time-card h3 {
   margin: 0;
   font-size: 1.3rem;
-  font-family: 'Instrument Serif', serif;
+  font-family: var(--font-main);
   color: black;
 }
 
@@ -54,7 +54,7 @@
   font-size: 1.1rem;
   color: black;
   font-weight: bold;
-  font-family: 'Instrument Serif', serif;
+  font-family: var(--font-main);
 }
 
 .reading-time-details {
@@ -66,7 +66,7 @@
 .reading-time-details p {
   margin: 0;
   font-size: 0.9rem;
-  font-family: 'Instrument Serif', serif;
+  font-family: var(--font-main);
   color: black;
 }
 
